CAMEL-10141: make camel-example-rest-servlet tests pass on Java 9